fix overflowing user input

--- a/vocodes/src/App.scss
+++ b/vocodes/src/App.scss
@@ -16,6 +16,11 @@ body {
   font-weight: 300; // For Fira Sans
 }
 
+// Style for user text input that overflows
+.overflow-fix {
+  overflow-wrap: anywhere;
+}
+
 .mainwrap {
   max-width: 700px;
   margin: auto;
